// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingBilling Doesn't own the namespace Renders the component 1`] = `
<v-container-stub tag="div">
  <v-row-stub tag="div" align="center" justify="center" class="mt-4">
    <v-col-stub sm="8" tag="div">
      <settingownerinfo-stub data-test="settingOwnerInfo-component"></settingownerinfo-stub>
      <!---->
      <!---->
    </v-col-stub>
  </v-row-stub>
</v-container-stub>
`;

exports[`SettingBilling Namespace owner with subscription Renders the component 1`] = `
<v-container-stub tag="div">
  <v-row-stub tag="div" align="center" justify="center" class="mt-4">
    <v-col-stub sm="8" tag="div">
      <settingownerinfo-stub isowner="true" data-test="settingOwnerInfo-component"></settingownerinfo-stub>
      <div data-test="content-div">
        <v-row-stub tag="div">
          <v-col-stub tag="div">
            <h3>
              Subscription info
            </h3>
          </v-col-stub>
          <v-spacer-stub></v-spacer-stub>
          <!---->
        </v-row-stub>
        <div class="mt-6 pl-4 pr-4">
          <div>
            <p>
              Plan: <b> Premium usage </b></p>
            <p>
              Description: In this plan, the amount is charged according to the number of
              devices used.
            </p>
          </div>
        </div>
      </div>
      <div data-test="subscriptionActive-div" class="mt-4 mb-4">
        <v-divider-stub></v-divider-stub>
        <v-divider-stub></v-divider-stub>
        <div class="mt-6">
          <v-row-stub tag="div">
            <v-col-stub tag="div">
              <h3>
                Next bill
              </h3>
            </v-col-stub>
          </v-row-stub>
          <div class="mt-6 pl-4 pr-4">
            <p>
              Date: <b> January 1st 1970 </b></p>
            <p>
              Estimated total:
              <b>
                $0.00
              </b>
            </p>
          </div>
        </div>
        <v-divider-stub></v-divider-stub>
        <v-divider-stub></v-divider-stub>
        <div class="mt-6">
          <v-row-stub tag="div">
            <v-col-stub tag="div">
              <h3>
                Payment method details
              </h3>
            </v-col-stub>
            <v-spacer-stub></v-spacer-stub>
            <v-col-stub md="auto" tag="div" class="ml-auto">
              <paymentmethod-stub typeoperation="update" data-test="updatePaymentMethod-component"></paymentmethod-stub>
            </v-col-stub>
          </v-row-stub>
          <div class="mt-5 pl-4 pr-4">
            <p>
              <billingicon-stub iconname="visa" data-test="billingIcon-component"></billingicon-stub>
              4/2024 -
              4242
            </p>
          </div>
        </div>
        <v-divider-stub></v-divider-stub>
        <v-divider-stub></v-divider-stub>
        <div class="mt-6">
          <v-row-stub tag="div">
            <v-col-stub tag="div">
              <h3>
                Cancel Subscription
              </h3>
            </v-col-stub>
          </v-row-stub>
          <div class="mt-2 pl-4">
            <v-row-stub tag="div">
              <v-col-stub tag="div">
                <p>
                  When canceling subscription, you may lose access to devices.
                </p>
              </v-col-stub>
              <v-spacer-stub></v-spacer-stub>
              <v-col-stub md="auto" tag="div" class="ml-auto">
                <billingcancel-stub nextpaymentdue="0"></billingcancel-stub>
              </v-col-stub>
            </v-row-stub>
          </div>
        </div>
      </div>
    </v-col-stub>
  </v-row-stub>
</v-container-stub>
`;

exports[`SettingBilling Namespace owner without subscription Renders the component 1`] = `
<v-container-stub tag="div">
  <v-row-stub tag="div" align="center" justify="center" class="mt-4">
    <v-col-stub sm="8" tag="div">
      <settingownerinfo-stub isowner="true" data-test="settingOwnerInfo-component"></settingownerinfo-stub>
      <div data-test="content-div">
        <v-row-stub tag="div">
          <v-col-stub tag="div">
            <h3>
              Subscription info
            </h3>
          </v-col-stub>
          <v-spacer-stub></v-spacer-stub>
          <v-col-stub md="auto" tag="div" class="ml-auto">
            <paymentmethod-stub typeoperation="subscription" data-test="subscriptionPaymentMethod-component"></paymentmethod-stub>
          </v-col-stub>
        </v-row-stub>
        <div class="mt-6 pl-4 pr-4">
          <div>
            <p>
              Plan: <b> Free </b></p>
            <p>
              Description: you can only add 3 devices.
            </p>
          </div>
        </div>
      </div>
      <!---->
    </v-col-stub>
  </v-row-stub>
</v-container-stub>
`;
